tests/baselines/reference/es6ImportDefaultBindingInEs5.errors.txt
tests/cases/compiler/es6ImportDefaultBindingInEs5_1.ts(1,8): error TS1192: Module '"tests/cases/compiler/es6ImportDefaultBindingInEs5_0"' has no default export.


==== tests/cases/compiler/es6ImportDefaultBindingInEs5_0.ts (0 errors) ====
    var a = 10;
    export = a;
    
==== tests/cases/compiler/es6ImportDefaultBindingInEs5_1.ts (1 errors) ====
    import defaultBinding from "./es6ImportDefaultBindingInEs5_0";
           ~~~~~~~~~~~~~~
!!! error TS1192: Module '"tests/cases/compiler/es6ImportDefaultBindingInEs5_0"' has no default export.